--- a/client/src/Components/Header.module.css
+++ b/client/src/Components/Header.module.css
@@ -1,3 +1,19 @@
-.border {
-    border: 1px solid green;
+.header {
+    display: flex;
+    justify-content: space-between;
+    background-color: #264653;
+}
+
+.button {
+    margin: 10px;
+    padding: 2px 10px;
+    font-size: 1.5rem;
+    background-color: #f4a261;
+    border: 1px solid #f4a261;
+    border-radius: 2px;
+}
+
+.title {
+    padding: 5px 10px;
+    color: #fefae0;
 }
