--- a/client/src/Components/List.module.css
+++ b/client/src/Components/List.module.css
@@ -1,3 +1,9 @@
 .border {
-    border: 1px solid blue;
+  padding: 10px;
+}
+
+.gridList {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
 }
