--- a/client/src/Components/Sidebar.module.css
+++ b/client/src/Components/Sidebar.module.css
@@ -4,5 +4,41 @@
 }
 
 .filterButton {
-  margin-bottom: 5px;
+  margin: 5px 0px 0px 0px;
+  border: none;
+  background-color: #fefae0;
+  font-weight: 700;
+  font-size: 1.3rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.filterOption {
+  padding: 0px 10px;
+}
+
+input[type="checkbox"]:before {
+  position: relative;
+  display: block;
+  content: "";
+  border: 1px solid black;
+  border-radius: 3px;
+  width: 15px;
+  height: 15px;
+  background: #fefae0;
+}
+
+input[type="checkbox"]:checked:before {
+  content: "\2713";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 900;
+  color: #fff;
+  background-color: black;
+}
+
+.filterOption label {
+  margin-left: 8px;
 }
