--- a/client/src/Components/Header.module.css
+++ b/client/src/Components/Header.module.css
@@ -1,19 +1,24 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    background-color: #264653;
+  display: flex;
+  justify-content: space-between;
+  background-color: #264653;
 }
 
-.button {
-    margin: 10px;
-    padding: 2px 10px;
-    font-size: 1.5rem;
-    background-color: #f4a261;
-    border: 1px solid #f4a261;
-    border-radius: 2px;
+/* .cartButton {
+  margin: 10px;
+  padding: 2px 10px;
+  font-size: 1.5rem;
+  background-color: #f4a261;
+  border: none;
+  border-radius: 2px;
 }
+
+.cartButton:hover {
+  cursor: pointer;
+  background-color: #e9c46a;
+} */
 
 .title {
-    padding: 5px 10px;
-    color: #fefae0;
+  padding: 5px 10px;
+  color: #fefae0;
 }
