--- a/client/src/Components/Item.module.css
+++ b/client/src/Components/Item.module.css
@@ -1,23 +1,29 @@
 .border {
-    padding: 10px;
+  padding: 10px;
 }
 
 img {
-    border-radius: 5px 5px 0 0;
+  border-radius: 5px 5px 0 0;
 }
 
 h1 {
-    text-transform: capitalize;
+  text-transform: capitalize;
 }
 
 .buttonContainer {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
-.button {
-    background-color: #f4a261;
-    border: 1px solid #f4a261;
-    border-radius: 2px;
-    font-weight: 500;
+.quickAddButton {
+  background-color: #36ccbb;
+  border: none;
+  border-radius: 2px;
+  font-weight: 500;
+  font-size: 1.1rem;
+}
+
+.quickAddButton:hover {
+  cursor: pointer;
+  background-color: #f4a261;
 }
