--- a/client/src/Components/Cart.module.css
+++ b/client/src/Components/Cart.module.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.cartMessage {
+  text-align: center;
+  padding: 1rem 0;
+  border-top: 2px solid #bc6c25;
+}
+
 .cartItem {
   border-top: 2px solid #bc6c25;
   padding: 1rem 0;
@@ -35,11 +41,4 @@
   text-align: end;
   font-weight: 700;
   font-size: 1.25rem;
-}
-
-.removeButton {
-  border: none;
-  background-color: white;
-  color: rgb(133, 4, 4);
-  text-decoration: underline;
 }
