--- a/client/src/Components/UI/Button.module.css
+++ b/client/src/Components/UI/Button.module.css
@@ -15,6 +15,12 @@
 .textButton {
   border: none;
   background-color: white;
-  text-decoration: underline;
   color: #9b2226;
+  transition: font-weight 0.3s ease;
+  font-size: 1.1rem;
+}
+
+.textButton:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
