--- a/client/src/Components/List.module.css
+++ b/client/src/Components/List.module.css
@@ -4,8 +4,8 @@
 
 .gridList {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 0.5rem;
 }
 
 .displayMessage {
