--- a/client/src/Components/Header.module.css
+++ b/client/src/Components/Header.module.css
@@ -4,21 +4,17 @@
   background-color: #264653;
 }
 
-/* .cartButton {
-  margin: 10px;
-  padding: 2px 10px;
-  font-size: 1.5rem;
-  background-color: #f4a261;
-  border: none;
-  border-radius: 2px;
-}
-
-.cartButton:hover {
-  cursor: pointer;
-  background-color: #e9c46a;
-} */
-
 .title {
   padding: 5px 10px;
   color: #fefae0;
+}
+
+@media (max-width: 375px) {
+  .header {
+    width: 100%;
+  }
+
+  .title {
+    font-size: 1.2rem;
+  }
 }
