--- a/client/src/Components/QuickAdd.module.css
+++ b/client/src/Components/QuickAdd.module.css
@@ -37,3 +37,29 @@
   margin-top: 1.2rem;
   font-size: 1.1rem;
 }
+
+@media (min-width: 320px) and (max-width: 600px) {
+  .fabrictitles {
+    font-size: 1.5rem;
+  }
+
+  .quantity {
+    width: 2rem;
+    font-size: 0.75rem;
+  }
+
+  .quantityButton {
+    padding: 0 0.3rem;
+  }
+
+  .addToCartButton {
+    font-size: 0.7rem;
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .description {
+    margin-top: 0.5rem;
+    font-size: 1rem;
+  }
+}
