--- a/client/src/Components/Sidebar.module.css
+++ b/client/src/Components/Sidebar.module.css
@@ -59,3 +59,16 @@ input[type="checkbox"]:checked:before {
   text-decoration: underline;
   color: #780000;
 }
+
+@media (max-width: 900px) {
+  .filterButton {
+    font-size: 1rem;
+    text-align: left;
+    align-items: center;
+  }
+
+  .filterOption {
+    font-size: 0.7rem;
+    padding: 0;
+  }
+}
