--- a/client/src/Components/UI/Modal.module.css
+++ b/client/src/Components/UI/Modal.module.css
@@ -5,7 +5,8 @@
   margin-left: auto;
   margin-right: auto;
   top: 10%;
-  width: 55%;
+  min-width: 60%;
+  max-width: 80%;
   background-color: #ffffff;
   padding: 1rem;
 }
